bpo-43637: Fix a possible memory leak in winreg.SetValueEx() (GH-25038) (cherry picked from commit dfeec347f21b86879ba8f27f567bb275b243f1bc)

Co-authored-by: Zackery Spytz <zspytz@gmail.com>